# snaps-api

./: .env_example  .gitignore  Dockerfile  Dockerfile.prod  README.md  TESTING.md  appspec.yaml  build_and_push_ecr.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  temp.py
.aws/ecs/: task-definition.json
.github/ISSUE_TEMPLATE/: bug-report-template.md  issue--feature-request.md
.github/workflows/: deploy.yml
docs/: tasks.md
nginx/: default.conf  nginx.conf
snapsapi/: urls.py
snapsapi/apps/comments/: apps.py  model_managers.py  model_mixins.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
snapsapi/apps/comments/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_comment_options_alter_comment_content.py  0005_comment_likes_count.py  0006_comment_deleted_at_comment_is_deleted_and_more.py
snapsapi/apps/comments/tests/: conftest.py  payloads.py  test_comments.py
snapsapi/apps/core/: apps.py  exceptions.py  model_managers.py  models.py  pagination.py  schemas.py  serializers.py  urls.py  views.py
snapsapi/apps/core/migrations/: 0001_initial.py  0002_alter_post_uid.py  0002_initial.py  0002_tag_post_comment_postlike_follow.py  0003_alter_follow_follower_alter_follow_following.py  0003_alter_post_options_rename_image_post_images_and_more.py  0003_post_image.py  0003_post_updated_at.py  0003_remove_post_tags_remove_post_user_and_more.py  (+1 more)
snapsapi/apps/likes/: apps.py  models.py  serializers.py  views.py
snapsapi/apps/notifications/: apps.py  models.py  services.py  urls.py  views.py
snapsapi/apps/posts/: __init__.py  admin.py  apps.py  model_managers.py  model_mixins.py  model_querysets.py  models.py  schemas.py  serializers.py  signals.py  urls.py  utils.py  views.py
snapsapi/apps/users/: __init__.py  adapters.py  admin.py  apps.py  exceptions.py  model_managers.py  model_mixins.py  models.py  permissions.py  schemas.py  serializers.py  signals.py  urls.py  views.py
snapsapi/config/: asgi.py  spectacular_hooks.py  urls.py  wsgi.py
snapsapi/config/settings/: base.py  docker.py  local.py  prod.py  test.py
snapsapi/utils/: aws.py
(+54 files in other folders)
